[tool.poetry]
name = "behave-to-cucumber-json-formatter"
version = "0.0.0"
description = "Formats behave json output into cucumber json."
authors = ["softozor <softozor@gmail.com>"]
readme = "README.md"
packages = [{include = "cucumber_json.py"}]

[tool.poetry.dependencies]
behave = "1.2.6"
pytest = "^7.2.0"
python = "^3.8"
six = "^1.16.0"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"